--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,12 +2,12 @@
 <!-- Set your package name here -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="in.celest.xash3d.thegate"
-      android:versionCode="51"
-      android:versionName="1.0.1">
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="5"/>
+      android:versionCode="645"
+      android:versionName="1.1">
+    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="23"/>
     <!-- Set your application name here -->
     <application android:label="The Gate"
-		 android:debuggable="true"
+		 android:debuggable="false"
 		 android:icon="@drawable/logo_xash_thegate">
     <!-- Set your launcher title here -->
         <activity android:name="in.celest.xash3d.LauncherActivity"
